--- a/SearchApp/Base.lproj/MainMenu.xib
+++ b/SearchApp/Base.lproj/MainMenu.xib
@@ -15,6 +15,7 @@
         <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="SearchApp" customModuleProvider="target">
             <connections>
                 <outlet property="outlineView" destination="3Nn-Wq-K9X" id="ejC-cy-ub6"/>
+                <outlet property="recordButton" destination="bxd-va-K0Q" id="TFE-ev-aos"/>
                 <outlet property="textField" destination="2ud-gt-yoP" id="8kf-jW-dqT"/>
                 <outlet property="window" destination="QvC-M9-y7g" id="gIp-Ho-8D9"/>
             </connections>
@@ -687,13 +688,13 @@
                         </textFieldCell>
                     </textField>
                     <scrollView fixedFrame="YES" autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iU5-GL-DVc">
-                        <rect key="frame" x="20" y="20" width="440" height="285"/>
+                        <rect key="frame" x="20" y="56" width="440" height="249"/>
                         <clipView key="contentView" ambiguous="YES" id="4rg-nv-S6b">
-                            <rect key="frame" x="1" y="1" width="438" height="283"/>
+                            <rect key="frame" x="1" y="1" width="438" height="247"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <outlineView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" multipleSelection="NO" autosaveColumns="NO" rowSizeStyle="automatic" viewBased="YES" indentationPerLevel="16" outlineTableColumn="iVy-AT-1Hj" id="3Nn-Wq-K9X" userLabel="Outline View" customClass="ExtOutlineView" customModule="BindableControls">
-                                    <rect key="frame" x="0.0" y="0.0" width="438" height="283"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="438" height="247"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <size key="intercellSpacing" width="3" height="2"/>
                                     <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -745,6 +746,13 @@
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                     </scrollView>
+                    <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bxd-va-K0Q" customClass="Button" customModule="BindableControls">
+                        <rect key="frame" x="184" y="13" width="113" height="32"/>
+                        <buttonCell key="cell" type="push" title="Record Sale" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Shw-W5-kDO">
+                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                            <font key="font" metaFont="system"/>
+                        </buttonCell>
+                    </button>
                 </subviews>
             </view>
         </window>
