--- a/SearchApp/Base.lproj/MainMenu.xib
+++ b/SearchApp/Base.lproj/MainMenu.xib
@@ -16,7 +16,8 @@
             <connections>
                 <outlet property="outlineView" destination="3Nn-Wq-K9X" id="ejC-cy-ub6"/>
                 <outlet property="progressIndicator" destination="231-Dk-KE5" id="B5x-fL-bwW"/>
-                <outlet property="recordButton" destination="bxd-va-K0Q" id="TFE-ev-aos"/>
+                <outlet property="recordButton" destination="Yc6-EX-FxR" id="gYk-I9-IbA"/>
+                <outlet property="saveButton" destination="bxd-va-K0Q" id="RD0-vm-bz4"/>
                 <outlet property="textField" destination="2ud-gt-yoP" id="8kf-jW-dqT"/>
                 <outlet property="window" destination="QvC-M9-y7g" id="gIp-Ho-8D9"/>
             </connections>
@@ -750,9 +751,16 @@
                     <progressIndicator wantsLayer="YES" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" maxValue="100" bezeled="NO" indeterminate="YES" controlSize="small" style="spinning" translatesAutoresizingMaskIntoConstraints="NO" id="231-Dk-KE5" customClass="ProgressIndicator" customModule="BindableControls">
                         <rect key="frame" x="20" y="20" width="16" height="16"/>
                     </progressIndicator>
+                    <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Yc6-EX-FxR" customClass="Button" customModule="BindableControls">
+                        <rect key="frame" x="226" y="13" width="113" height="32"/>
+                        <buttonCell key="cell" type="push" title="Record Sale" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="rAP-Z1-Spv">
+                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                            <font key="font" metaFont="system"/>
+                        </buttonCell>
+                    </button>
                     <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bxd-va-K0Q" customClass="Button" customModule="BindableControls">
-                        <rect key="frame" x="353" y="13" width="113" height="32"/>
-                        <buttonCell key="cell" type="push" title="Record Sale" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Shw-W5-kDO">
+                        <rect key="frame" x="339" y="13" width="127" height="32"/>
+                        <buttonCell key="cell" type="push" title="Save Changes" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Shw-W5-kDO">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                             <font key="font" metaFont="system"/>
                         </buttonCell>
